# ResearchGroupTools 0.2-0

# Development version

## New features and functions

* Added new functions for regression output as LaTeX with t-values

* Added routines adf(), cointegrationTable(), plotIrf(), impulseResponsePlot()

* Added new helpers for plotting: allDigitslabels()

# Version 0.2-0

## New features and functions

* Added new functions for string manipulating

* Added new functions for econometrics