@@ -1,5 +1,8 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(standardizeCoefficients,lm)
+S3method(standardizeCoefficients,svarest)
+S3method(standardizeCoefficients,varest)
 export("%+%")
 export(Library)
 export(adf)
@@ -29,6 +32,7 @@ export(scientificLabels)
 export(showCoeftest)
 export(showColsNA)
 export(showRowsNA)
+export(standardizeCoefficients)
 export(texreg_tvalues)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
