@@ -4,6 +4,10 @@
 
 ## New features and functions
 
+* New routine standardizeCoefficients() for lm and vars
+
+* Hooks to output to eliminate output of "-0.00"
+
 * Added new functions for regression output as LaTeX with t-values
 
 * Added routines adf(), cointegrationTable(), plotIrf(), impulseResponsePlot()
